--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
 <!-- <app-welcome></app-welcome> -->
-<app-login></app-login>
+<!-- <app-login></app-login> -->
 <!-- <div>Component content</div> -->
 <router-outlet></router-outlet>
