--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
 User name: <input type="text" name="username" [(ngModel)]="username "> 
-Password: <input type="password" name="password" value="{{password}}">
+Password: <input type="password" name="password" [(ngModel)]="password">
 <button (click)=handleLogin()>Login</button>
 
