created todos page

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,3 @@
-Welcome {{name}}. Welcome to our app.
+<div>Welcome {{name}}. Welcome to our app.</div>
+
+<div>You can manage your todos here. <a routerLink="/todos">here</a></div>
