--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -7,7 +7,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
+    <!-- for(Todo todo:todos-->
+    <tr *ngFor="let todo of todos">
       <td>{{todo.id}}</td>
       <td>{{todo.description}}</td>
     </tr>
