--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 <!-- <app-welcome></app-welcome> -->
 <!-- <app-login></app-login> -->
 <!-- <div>Component content</div> -->
+<app-menu></app-menu>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
