--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -2,15 +2,19 @@
   <caption> My Todo's </caption>
   <thead>
     <tr>
-      <th>id</th>
+      
       <th>description</th>
+      <th>Target Date</th>
+      <th> is completed?</th>
     </tr>
   </thead>
   <tbody>
     <!-- for(Todo todo:todos-->
     <tr *ngFor="let todo of todos">
-      <td>{{todo.id}}</td>
+     
       <td>{{todo.description}}</td>
+      <td>{{todo.targetDate | date }}</td>
+      <td>{{todo.done}}</td>
     </tr>
 
   </tbody>
