added bootstrap classes

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,2 +1,5 @@
-<BR><BR>
-  FOOTER
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted">All rights reserved @kbhalla22</span>
+  </div>
+</footer>
