--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -1,5 +1,7 @@
-<table border="1">
-  <caption> My Todo's </caption>
+<h1>My Todos</h1>
+<div class="container">
+<table class="table">
+  
   <thead>
     <tr>
       
@@ -19,3 +21,4 @@
 
   </tbody>
 </table>
+</div>
