--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
 <!-- <app-login></app-login> -->
 <!-- <div>Component content</div> -->
 <app-menu></app-menu>
+<div class="container">
 <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
