--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,10 @@
+<h1>Login</h1>
+<div class="container">
+<div  class=" alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
+<div>
 User name: <input type="text" name="username" [(ngModel)]="username "> 
 Password: <input type="password" name="password" [(ngModel)]="password">
-<button (click)=handleLogin()>Login</button>
+<button (click)=handleLogin() class="btn btn-success">Login</button>
+</div>
+</div>
 
