--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,3 @@
-<div>Welcome {{name}}. Welcome to our app.</div>
+<h1>Welcome</h1>
+<div class="container">Welcome {{name}}. You can manage your todos here. <a routerLink="/todos">here</a></div>
 
-<div>You can manage your todos here. <a routerLink="/todos">here</a></div>
