--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,8 +8,8 @@
     <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/todos" class="nav-link">Todos</a></li>
   </ul>
   <ul class="navbar-nav" class="navbar-nav navbar-collapse justify-content-end"> 
-    <li><a *ngIf="!hardcodedAuthenticationService.isUserLoggedIn" routerLink="/login" class="nav-link">Login</a></li>
-    <li><a *ngIf="!hardcodedAuthenticationService.isUserLoggedIn  " routerLink="/logout" class="nav-link">Logout</a></li>
+    <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/login" class="nav-link">Login</a></li>
+    <li><a *ngIf="hardcodedAuthenticationService.logout " routerLink="/logout" class="nav-link">Logout</a></li>
   </ul>
 </nav>
 
