connected to H2 database

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
 
   </div>
   <ul class="navbar-nav">
-    <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/welcome/kbhalla22" class="nav-link">Home</a></li>
+    <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/welcome/in28minutes" class="nav-link">Home</a></li>
     <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/todos" class="nav-link">Todos</a></li>
   </ul>
   <ul class="navbar-nav" class="navbar-nav navbar-collapse justify-content-end"> 
